--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "dayjs": "^1.9.7",
+    "i18next": "^19.8.4",
     "react": "16.13.1",
+    "react-i18next": "^11.8.4",
     "react-native": "0.63.4",
+    "react-native-restart": "0.0.20",
     "react-native-swipeview": "^1.0.3",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
