integrating with graphql

--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
+    "@react-native-community/async-storage": "^1.12.1",
+    "apollo-server": "^2.19.1",
+    "apollo3-cache-persist": "^0.9.1",
     "dayjs": "^1.9.7",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.4.0",
     "i18next": "^19.8.4",
+    "mongoose": "^5.11.8",
     "react": "16.13.1",
     "react-i18next": "^11.8.4",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.1",
     "react-native-restart": "0.0.20",
     "react-native-swipeview": "^1.0.3",
     "react-native-vector-icons": "^7.1.0",
